--- a/pos/package.json
+++ b/pos/package.json
@@ -13,11 +13,13 @@
     "@popperjs/core": "^2.11.8",
     "@tailwindcss/vite": "^4.0.3",
     "bootstrap": "^5.3.3",
+    "firebase": "^11.2.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "react-to-print": "^3.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
